k8s/community-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-service
  namespace: pawfiler
spec:
  replicas: 2
  selector:
    matchLabels:
      app: community-service
  template:
    metadata:
      labels:
        app: community-service
    spec:
      containers:
      - name: community-service
        image: 009946608368.dkr.ecr.ap-northeast-2.amazonaws.com/pawfiler/community-service:latest
        ports:
        - containerPort: 50053
        readinessProbe:
          tcpSocket:
            port: 50053
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 50053
          initialDelaySeconds: 30
          periodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: community-service
  namespace: pawfiler
spec:
  selector:
    app: community-service
  ports:
  - port: 50053
    targetPort: 50053
